[gd_scene load_steps=3 format=2]

[ext_resource path="res://Templates/Moveable.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="Moveable" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="RayUp" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, -64 )

[node name="RayRight" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 64, 0 )

[node name="RayDown" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 64 )

[node name="RayLeft" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -64, 0 )

[node name="Tween" type="Tween" parent="."]

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
